Project

General

Profile

Actions

Bug #11128

closed

SPARC build fails for sun4v picl snmp plugin

Added by Peter Tribble almost 4 years ago. Updated almost 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
-
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

A SPARC build fails with:

; /export/home/ptribble/Illumos/topo-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/ctfconvert -L VERSION pics/debug.o
ctfconvert: file does not contain DWARF data
  • Error code 1
    dmake: Warning: Command failed for target `pics/debug.o'
    Current working directory /export/home/ptribble/Illumos/topo-gate/usr/src/cmd/picl/plugins/sun4v/lib/snmp

Looking at the code, it may be cleaner to remove the SNMP_DEBUG pieces entirely.

Actions #1

Updated by Peter Tribble almost 4 years ago

Notes on the debugging here:

The debug code here is not normal debug. It has to be enabled locally, and the Makefile warns against doing so:

#
  1. Be careful when enabling SNMP_DEBUG; the debug log can quickly grow
  2. very very large. Never run cycle stress test with SNMP_DEBUG enabled! #
    #CPPFLAGS += -DSNMP_DEBUG

Given our user population, it's likely that nobody has ever compiled or used this debug code in illumos.

Looking at the debug output itself, it's a very blunt instrument, and would essentially bury a user in output, so that in a reasonable scenario I would expect far more specific debugging to be enabled - and that would be very much tailored to the problem under investigation at the time rather then the generic code here.

It's reasonable to ask - under what circumstances would one do this? The code here is interfacing between the OS and the Service Processor, so the primary objective would be to debug what the Service Proccessor is sending to us. Useful to someone working on service processor firmware, not so much to us.

Finally, if anyone wished to study or resurrect this ocde, they simply have to check out an older copy of the gate.

Actions #2

Updated by Electric Monk almost 4 years ago

  • Status changed from New to Closed
  • % Done changed from 0 to 100

git commit 0409f346a11d84a1549a8e4e2acb42fa4561e8c2

commit  0409f346a11d84a1549a8e4e2acb42fa4561e8c2
Author: Peter Tribble <peter.tribble@gmail.com>
Date:   2019-06-14T16:22:28.000Z

    11128 SPARC build fails for sun4v picl snmp plugin
    Reviewed by: Toomas Soome <tsoome@me.com>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF