11128 SPARC build fails for sun4v picl snmp plugin Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Dan McDonald <danmcd@joyent.com>